--- a/views/index.html
+++ b/views/index.html
@@ -8,9 +8,9 @@
     <script src="lib/Painter.js"></script>
 </head>
 
-<body>
-
-<svg id="svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="500" height="500"></svg>
+<body style="margin: 0; padding: 0;">
+222
+<svg id="svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="500" height="500" style="margin: 0;"></svg>
 
 <textarea id="content"></textarea>
 
@@ -58,13 +58,13 @@
 
     // painter.circle(30, 30, 40);
     painter.circle({
-        cx: 30,
-        cy:30,
+        cx: 50,
+        cy:50,
         r:50
     });
 
     painter.ellipse({
-        cx: 60,
+        cx: 300,
         cy:80,
         rx:50,
         ry:70
