--- a/views/index.html
+++ b/views/index.html
@@ -6,11 +6,21 @@
     <script src="lib/socket.io-1.4.5.js"></script>
     <script src="lib/snap.svg-min.js"></script>
     <script src="lib/Painter.js"></script>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body style="margin: 0; padding: 0;">
-222
-<svg id="svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="500" height="500" style="margin: 0;"></svg>
+<body>
+
+<svg id="svg" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg>
+
+<div class="tool-box">
+    <div class="item">缩放</div>
+    <div class="item">颜色</div>
+    <div class="item">画笔</div>
+    <div class="item">文字</div>
+    <div class="item">导出</div>
+    <div class="item">清空</div>
+</div>
 
 </body>
 
