--- a/views/css/style.css
+++ b/views/css/style.css
@@ -4,27 +4,24 @@
 }
 
 .tool-box {
-    width: 500px;
-    height: 50px;
+    width: 600px;
+    height: 40px;
     background-color:rgba(0, 0, 0, 0.701961);
     margin: 0;
-    padding-left: 10px;
     box-sizing: border-box;
 }
 
 .tool-box .item {
-    width: 40px;
+    width: 50px;
     height: 40px;
     float: left;
-    border-radius: 30px;
     box-shadow: inset 0 0 20px orange;
     background-color: red;
     text-align: center;
     line-height: 40px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
     color: white;
-    margin-top: 5px;
     font-size: 14px;
     cursor: pointer;
     position: relative;
@@ -33,24 +30,25 @@
 #svg {
     background-color: #eee;
     margin: 0 auto;
-    width: 500px;
+    width: 600px;
     height: 500px;
 }
 
 .menu {
     width: 50px;
-    height: 120px;
+    height: auto;
     background-color: #ddd;
     position: absolute;
-    top: -125px;
-    left: -5px;
+    top: 40px;
 }
 
 .menu .child{
     width: 50px;
-    height: 40px;
+    height: 30px;
+    line-height: 30px;
     border-bottom: 1px solid gray;
     box-sizing: border-box;
+    font-size: 12px;
 }
 .menu :last-child{
     border-bottom: none;
