--- a/views/index.html
+++ b/views/index.html
@@ -23,18 +23,20 @@
         缩放
     </div>
     <div class="item">
-        <div class="menu">
-            <div class="child">红</div>
-            <div class="child">绿</div>
-            <div class="child">蓝</div>
+        <div class="menu" id="color-selector">
+            <div class="child" id="red">红</div>
+            <div class="child" id="green">绿</div>
+            <div class="child" id="blue">蓝</div>
+            <div class="child" id="black">黑</div>
         </div>
         颜色
     </div>
     <div class="item">
-        <div class="menu">
-            <div class="child">直线</div>
-            <div class="child">矩形</div>
-            <div class="child">圆形</div>
+        <div class="menu" id="shape-selector">
+            <div class="child" id="line">直线</div>
+            <div class="child" id="rect">矩形</div>
+            <div class="child" id="circle">圆形</div>
+            <div class="child" id="ellipse">椭圆</div>
         </div>
         画笔
     </div>
@@ -47,9 +49,21 @@
         文字
     </div>
     <div class="item">
+        <div class="menu">
+            <div class="child">橡皮擦</div>
+            <div class="child">删除图形</div>
+            <div class="child">清空画布</div>
+        </div>
+        擦除
+    </div>
+    <div class="item">
+        <div class="menu">
+            <div class="child">文件</div>
+            <div class="child">剪贴板</div>
+            <div class="child">URL</div>
+        </div>
         导出
     </div>
-    <div class="item">清空</div>
 </div>
 
 </body>
@@ -110,30 +124,23 @@
 
     var painter = new Painter('svg');
 
-    painter.circle({
-        cx: 50,
-        cy:50,
-        r:50
-    });
-
-    painter.ellipse({
-        cx: 300,
-        cy:80,
-        rx:50,
-        ry:70
-    });
-
-    painter.rect(200, 230, 80, 90);
-
-    painter.line(90, 120, 115, 195);
-
-    painter.text(90, 120, 'hello world');
-
-    console.log(painter);
-
     painter.setChangeListener(function (diff) {
         socket.emit('draw', {data: diff});
     });
+
+    var shapeSelector = document.getElementById('shape-selector');
+    shapeSelector.addEventListener('click', function (e) {
+        if (e.target.className == 'child') {
+            painter.nowShape = e.target.id;
+        }
+    }, false);
+
+    var colorSelector = document.getElementById('color-selector');
+    colorSelector.addEventListener('click', function (e) {
+        if (e.target.className == 'child') {
+            painter.nowColor = e.target.id;
+        }
+    }, false);
 
 </script>
 
