--- a/views/index.html
+++ b/views/index.html
@@ -144,6 +144,9 @@
         }
     }, false);
 
+    var path = painter.path(10, 20, 30, 40);
+    painter.path(0, 0, 40, 70,  path);
+
 </script>
 
 </html>
