--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Websocket Drawing Board</title>
-    <script src="lib/socket.io-1.4.5.js"></script>
-    <script src="lib/snap.svg-min.js"></script>
-    <script src="lib/Painter.js"></script>
+    <script src="js/socket.io-1.4.5.js"></script>
+    <script src="js/snap.svg-min.js"></script>
+    <script src="js/Painter.js"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
