--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="item">
         <div class="menu" id="shape-selector">
-            <div class="child" id="path">签名</div>
+            <div class="child" id="path">铅笔</div>
             <div class="child" id="text">文字</div>
             <div class="child" id="line">直线</div>
             <div class="child" id="rect">矩形</div>
@@ -53,16 +53,9 @@
         <div class="menu">
             <div class="child" id="eraser">橡皮擦</div>
             <div class="child" id="clear">清空画布</div>
+            <div class="child" id="file"> 导出</div>
         </div>
-        擦除
-    </div>
-    <div class="item">
-        <div class="menu">
-            <div class="child" id="file">文件</div>
-            <div class="child">剪贴板</div>
-            <div class="child">URL</div>
-        </div>
-        导出
+        工具
     </div>
 </div>
 
