--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Websocket Drawing Board</title>
     <script src="js/socket.io-1.4.5.js"></script>
-    <script src="js/Painter.js"></script>
+    <script src="js/svgPainter.js"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
