--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,8 @@
 
 <body>
 
-<svg id="svg" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg>
+<svg id="svg" xmlns="http://www.w3.org/2000/svg" version="1.1">
+</svg>
 
 <div class="tool-box">
     <div class="item">
